--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,440 @@
-/******* Change Box Model ***************/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+:root {
+  --background-light: #ffffff;
+  --background-dark: #24292e;
+  --text-light: black;
+  --text-dark: #ffffff;
+  --nav-link-color-light: #6c757d;
+  --nav-link-color-dark: #1f2428;
+}
+
+* {
+  font-family: 'Montserrat', sans-serif;
+
+}
+
+body {
+  margin: 0;
+  background-image: url('/images/site/small_check.jpg');
+}
+
+
+img {
+  width: 50px;
+  height: 50px;
+
+}
+
+header {
+  margin: 5px auto;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  color: white;
+}
+
+header p {
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--background-light);
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  width: 80%;
+  border: 3px solid #ab191a;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center; 
+}
+
+
+
+.nav-link {
+  padding: 0.5rem 1rem;
+  display: block;
+  text-decoration: none;
+  color: #6c757d;
+}
+
+.nav-link.active,
+.nav-link:hover {
+  background-color: #ab191a;
+  color: #fff;
+}
+
+main {
+  width: 80%;
+  margin: 0 auto;
+  gap: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #ab191a;
+
+}
+
+.hero {
+  position: relative; 
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  margin: 5px 0;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hero p {
+  position: relative; 
+  z-index: 1; 
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3); 
+
+}
+
+
+
+.hero-content {
+  max-width: 600px;
+  margin-top: 20px;
+  padding: 20px;
+
+}
+
+.hero h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+
+.card {
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  padding: 1rem;
+  background-color: var(--background-light);
+}
+
+#card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+
+section {
+  background-color: var(--background-light);
+  border: 3px solid #ab191a;
+  border-radius: 0.25rem;
+  margin: 5px;
+  color: #ab191a;
+  padding: 1rem;
+}
+
+section p {
+  color: var(--text-light);
+}
+
+footer {
+  background-color: #ab191a;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+
+
+#container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url('/images/site/engines.webp');
+  margin: 0;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid #ab191a;
+}
+
+.siteName a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 1px #000000;
+}
+
+#tools a {
+  text-shadow: 1px 1px 2px #000000;
+  color: white;
+}
+
+
+html {
+  box-sizing: border-box;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
+/* Sections */
+body {
+  margin: 0;
+}
+
+body header {
+  margin: 5px;
+}
+
+main {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+/* Interactive */
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+
+@media screen and (min-width: 768px) {
+
+  #container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  
+  }
+
+  .hero {
+    background-image: url('/images/vehicles/delorean.jpg');
+    height: 100vh;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  
+    #container {
+      display: grid;
+      grid-template-columns: 1fr;
+    
+    }
+
+    nav {
+      flex-direction: column; 
+      align-items: stretch; 
+    }
+  
+    nav li {
+      margin-right: 0; 
+      margin-bottom: 5px; 
+    }
+
+    
+
+    .hero {
+      background-image: url('/images/vehicles/delorean.jpg');
+      height: 50vh;
+    }
 }
