--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,4 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> / CSE 340 </title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/larger.css">
 </head>
