--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav>
-    <ul>
-        <li><a class="nav-item nav-link active" href="#">Home</a></li>
-        <li><a class="nav-item nav-link" href="#">Custom</a></li>
-        <li><a class="nav-item nav-link" href="#">Sedan</a></li>
-        <li><a class="nav-item nav-link" href="#">SUV</a></li>
-        <li><a class="nav-item nav-link" href="#">Truck</a></li>
-    </ul>
+    <%- nav %>
 </nav>
