--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,11 +1,13 @@
 <!-- This view will consist of three distinct sections: A content heading, a message, and the inventory items display. -->
+<section>
+  <% if (title) { %>
+      <h1><%= title %></h1>
+      <% } else {
+        res.redirect('/')
+      } %>
+  
+  <%# messages() %>
+  
+  <%- grid %>
 
-<% if (title) { %>
-    <h1><%= title %></h1>
-    <% } else {
-      res.redirect('/')
-    } %>
-
-<%# messages() %>
-
-<%- grid %>
+</section>
