--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,8 +66,14 @@ nav li {
   margin-right: 10px;
   text-align: center; 
 }
-
-
+#trigger-error{
+  color: white;
+  
+}
+#details-img {
+  width: 100%;
+  height: 100%;
+}
 
 .nav-link {
   padding: 0.5rem 1rem;
