--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,8 @@
 <% const d = new Date()
 let year = d.getFullYear() %>
 <footer>
-  <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+  <p class="copyright">&copy; <%= year %>, CSE 340 App
+    </p>
+  <a id="trigger-error" href="/inv/trigger-error">Trigger Error</a>
+  
 </footer>
