--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,6 @@
+<section>
+    <h1><%- messages() %></h1>
+</section>
 
 <section>
     <h1>Welcome to CSE Motors!</h1>
@@ -11,7 +14,7 @@
 
 <div id="container">
 
-    
+
     <section id="card-container">
         <div class="card">
             <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
@@ -37,19 +40,29 @@
                 <a href="#" class="btn btn-primary">Hub Caps</a>
             </div>
         </div>
-    
+
     </section>
-    
+
     <section>
         <h1>DMC Delorean Reviews</h1>
         <ul>
-            <li><p>"So fast it's almost like traveling in time." (4/5)</p></li>
-            <li><p>"Coolest ride on the road." (4/5)</p></li>
-            <li><p>"I'm feeling McFly!" (5/5)</p></li>
-            <li><p>"The most futuristic ride of our day." (4.5/5)</p></li>
-            <li><p>"80's livin and I love it!" (5/5)</p></li>
+            <li>
+                <p>"So fast it's almost like traveling in time." (4/5)</p>
+            </li>
+            <li>
+                <p>"Coolest ride on the road." (4/5)</p>
+            </li>
+            <li>
+                <p>"I'm feeling McFly!" (5/5)</p>
+            </li>
+            <li>
+                <p>"The most futuristic ride of our day." (4.5/5)</p>
+            </li>
+            <li>
+                <p>"80's livin and I love it!" (5/5)</p>
+            </li>
         </ul>
     </section>
-    
-    
+
+
 </div>
