--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,68 +1,71 @@
-<section>
-    <h1><%- messages() %></h1>
-</section>
-
-<section>
-    <h1>Welcome to CSE Motors!</h1>
-    <div class="hero">
-        <div class="hero-content">
-            <p>DMC Delorean, superman doors, flux capacitor and fuzzy dice! </p>
-        </div>
-    </div>
-
-</section>
-
-<div id="container">
-
-
-    <section id="card-container">
-        <div class="card">
-            <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-            <div class="card-body">
-                <a href="#" class="btn btn-primary">Flux Capacitor</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/images/upgrades/flame.jpg" alt="Flame">
-            <div class="card-body">
-                <a href="#" class="btn btn-primary">Flame Decals</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
-            <div class="card-body">
-                <a href="#" class="btn btn-primary">Bumper Stickers</a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
-            <div class="card-body">
-                <a href="#" class="btn btn-primary">Hub Caps</a>
-            </div>
-        </div>
-
-    </section>
-
+<% if (messages()) { %>
     <section>
-        <h1>DMC Delorean Reviews</h1>
-        <ul>
-            <li>
-                <p>"So fast it's almost like traveling in time." (4/5)</p>
-            </li>
-            <li>
-                <p>"Coolest ride on the road." (4/5)</p>
-            </li>
-            <li>
-                <p>"I'm feeling McFly!" (5/5)</p>
-            </li>
-            <li>
-                <p>"The most futuristic ride of our day." (4.5/5)</p>
-            </li>
-            <li>
-                <p>"80's livin and I love it!" (5/5)</p>
-            </li>
-        </ul>
+
+        <h1><%- messages() %></h1>
     </section>
+    <% } %>
+
+        <section>
+            <h1>Welcome to CSE Motors!</h1>
+            <div class="hero">
+                <div class="hero-content">
+                    <p>DMC Delorean, superman doors, flux capacitor and fuzzy dice! </p>
+                </div>
+            </div>
+
+        </section>
+
+        <div id="container">
 
 
-</div>
+            <section id="card-container">
+                <div class="card">
+                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Flux Capacitor</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/images/upgrades/flame.jpg" alt="Flame">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Flame Decals</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Bumper Stickers</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary">Hub Caps</a>
+                    </div>
+                </div>
+
+            </section>
+
+            <section>
+                <h1>DMC Delorean Reviews</h1>
+                <ul>
+                    <li>
+                        <p>"So fast it's almost like traveling in time." (4/5)</p>
+                    </li>
+                    <li>
+                        <p>"Coolest ride on the road." (4/5)</p>
+                    </li>
+                    <li>
+                        <p>"I'm feeling McFly!" (5/5)</p>
+                    </li>
+                    <li>
+                        <p>"The most futuristic ride of our day." (4.5/5)</p>
+                    </li>
+                    <li>
+                        <p>"80's livin and I love it!" (5/5)</p>
+                    </li>
+                </ul>
+            </section>
+
+
+        </div>
