--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -2,4 +2,14 @@
     <h1>Inventory Management</h1>
     <h1><%- messages() %></h1>
 
+    <h2>Manage Inventory</h2>
+    <p>Select a classification from the list to see the items belonging to the classification.</p>
+
+    <%- classificationSelect %>
+
+    <table id="inventoryDisplay"></table>
+
+    <noscript>JavaScript must be enabled to use this page.</noscript>
 </section>
+
+<script src="../../js/inventory.js"></script>
