--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,5 @@
     <span class="siteName">
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
-    <div id="tools">
-      <a class="nav-link" title="Click to log in" href="/account/login">My Account</a>
-    </div>
+    <%- tools  %>
   </header>
